<?xml version="1.0" encoding="utf-8"?>
<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.websarva.wings.android.gourmet_search_app.backEnd.SubViewModel" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photoLarge"
                android:layout_width="380dp"
                android:layout_height="240dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/photoLarge_imageText"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.shop.photo.pc.l}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/shopNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@{viewModel.shop.name}"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/flame_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photoLarge" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/time_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/timeView"
                app:layout_constraintTop_toBottomOf="@+id/shopNameView" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.open}"
                android:background="@drawable/flame_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/addressView"
                app:layout_constraintTop_toBottomOf="@+id/timeView" />

            <TextView
                android:id="@+id/addressView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.address}"
                android:background="@drawable/flame_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressText" />

            <TextView
                android:id="@+id/stationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/station_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/stationView"
                app:layout_constraintTop_toBottomOf="@+id/addressView" />

            <TextView
                android:id="@+id/stationView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.station_name}"
                android:background="@drawable/flame_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stationText" />

            <TextView
                android:id="@+id/genreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/genre_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/genreView"
                app:layout_constraintTop_toBottomOf="@+id/stationView" />

            <TextView
                android:id="@+id/genreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@{viewModel.shop.genre.name}"
                android:background="@drawable/flame_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreText" />

            <Button
                android:id="@+id/mapButton"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:onClick="onMapSearchButtonClick"
                android:text="@string/map_text"
                android:textSize="24sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genreView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>